--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Tariq.png" height="200" width="200" alt="Tariq's Profile"></td>
+      <td><img src="images/Tariq.png" height="200" width="200" alt="Tariq's Profile"></td>
       <td><h1>Tariq Saeed</h1>
       <p><em>I am trying to learn <strong><a href="https://www.geeksforgeeks.org/web-development/">Web Development</a></strong>.</em></p>
       <p>
